[gd_scene load_steps=11 format=2]

[ext_resource path="res://app/interface/icon_button/icon_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://app/modules/progress/progress.tscn" type="PackedScene" id=2]
[ext_resource path="res://app/modules/icon_menu/icon_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://app/icons/generic_down.svg" type="Texture" id=4]
[ext_resource path="res://app/modules/controls/controls.tscn" type="PackedScene" id=5]
[ext_resource path="res://app/modules/queue/queue.tscn" type="PackedScene" id=6]
[ext_resource path="res://app/interface/drop_container/drop_container.tscn" type="PackedScene" id=7]
[ext_resource path="res://app/layouts/portrait.gd" type="Script" id=8]
[ext_resource path="res://app/modules/screens/screens.tscn" type="PackedScene" id=9]
[ext_resource path="res://app/modules/now_playing/now_playing.tscn" type="PackedScene" id=10]

[node name="Portrait" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
custom_constants/separation = 0

[node name="Screens" parent="Split" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1266.0
margin_bottom = 600.0
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="NowPlaying" parent="Split" instance=ExtResource( 10 )]
margin_top = 600.0
margin_right = 1266.0
margin_bottom = 646.0

[node name="IconMenu" parent="Split" instance=ExtResource( 3 )]
margin_top = 646.0
margin_right = 1266.0
margin_bottom = 706.0

[node name="QueueContainer" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="Queue" parent="QueueContainer" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 706.0
margin_right = 1266.0
margin_bottom = 1412.0

[node name="Top" parent="QueueContainer/Queue" index="0"]
margin_right = 1266.0

[node name="Drop" parent="QueueContainer/Queue/Top" index="0" instance=ExtResource( 1 )]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture = ExtResource( 4 )
icon_size = 0.75

[node name="Title" parent="QueueContainer/Queue/Top" index="1"]
margin_left = 34.0
margin_right = 1198.0

[node name="Shuffle" parent="QueueContainer/Queue/Top" index="2"]
margin_left = 1202.0
margin_right = 1232.0
text = "QUEUE_SHUFFLE"

[node name="Mode" parent="QueueContainer/Queue/Top" index="3"]
margin_left = 1236.0
margin_right = 1266.0

[node name="TrackListView" parent="QueueContainer/Queue" index="1"]
margin_right = 1266.0
margin_bottom = 604.0

[node name="Controls" type="MarginContainer" parent="QueueContainer/Queue"]
margin_top = 608.0
margin_right = 1266.0
margin_bottom = 672.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Controls" parent="QueueContainer/Queue/Controls" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 1258.0
margin_bottom = 56.0

[node name="Progress" type="MarginContainer" parent="QueueContainer/Queue"]
margin_top = 676.0
margin_right = 1266.0
margin_bottom = 706.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Progress" parent="QueueContainer/Queue/Progress" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 1258.0
margin_bottom = 22.0

[connection signal="selected" from="Split/NowPlaying" to="." method="_on_NowPlaying_selected"]
[connection signal="pressed" from="QueueContainer/Queue/Top/Drop" to="." method="_on_Drop_pressed"]

[editable path="QueueContainer/Queue"]
[editable path="QueueContainer/Queue/Top/Mode"]
